ffmpeg/tests/avformat/avio/bad_writer_lifetime.stderr
error[E0505]: cannot move out of `buf` because it is borrowed
  --> tests/avformat/avio/bad_writer_lifetime.rs:10:10
   |
6  |     let w = Writer::new(&mut *buf).unwrap();
   |                               --- borrow of `buf` occurs here
...
10 |     drop(buf);
   |          ^^^ move out of `buf` occurs here
11 |     drop(w);
   |          - borrow later used here
